force-app/main/default/objects/HDT_CausalCodeCalculation__mdt/HDT_CausalCodeCalculation__mdt.object-meta.xml
<CustomObject>
    <label>Calcolo Codice Causale</label>
    <pluralLabel>Calcolo Codici Causale</pluralLabel>
</CustomObject>