force-app/main/default/objects/HDT_CausalCodeCalculation__mdt/fields/CausalCode__c.field-meta.xml
<CustomField>
    <fullName>CausalCode__c</fullName>
    <label>Codice Causale</label>
    <length>4</length>
    <type>Text</type>
</CustomField>