force-app/main/default/objects/HDT_CausalCodeCalculation__mdt/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energia Elettrica</fullName>
                <default>true</default>
                <label>Energia Elettrica</label>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Acqua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>