force-app/main/default/objects/HDT_CausalCodeCalculation__mdt/fields/OperationCode__c.field-meta.xml
<CustomField>
    <fullName>OperationCode__c</fullName>
    <label>Codice Operazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>