force-app/main/default/objects/HDT_CausalCodeCalculation__mdt/fields/Subprocess__c.field-meta.xml
<CustomField>
    <fullName>Subprocess__c</fullName>
    <label>Sottoprocesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>